--- a/microservice-config-application.yml
+++ b/microservice-config-application.yml
@@ -1,17 +1,17 @@
 spring:
   profiles:
-    active:dev
+    active: dev
 --
 server:
   port: 4001
 spring:
-  profiles:dev
-  application:
+  profiles: dev
+  applications:
     name: microservice-config-dev
 --
 server:
-  port:4002
+  port: 4002
 spring:
-  profiles:prod
+  profiles: prod
   applications:
     name:microservice-config-prod
